lnrpc: send custom message
